@@ -3,6 +3,7 @@ Revision history for Perl module Git::PurePerl:
 0.39
      - add a method to generate the sha1 of an object
      - add a raw method to objects
+     - add a method to put objects (just blobs for now)
 
 0.38 Thu Dec 18 10:26:49 GMT 2008
      - add init() method to create a new repository
